                 "(print (quote #1=(member :floor :ceiling)))")))
    ;; [...]
    ;; Slots with :INSTANCE allocation:
    ;;   %RAW                           = (PRINT '(MEMBER :FLOOR :CEILING))
    ;;   %SOURCE                        = (0 . 43)
    ;; [...]
    ;; The %RAW slot used to contain (MEMBER :FLOOR :CEILING) instead of
    ;; (PRINT '(MEMBER :FLOOR :CEILING)).

Release 0.10 (2024-02-28)

* The deprecated generic functions ECLECTOR.PARSE-RESULT:SOURCE-POSITION and
  ECLECTOR.PARSE-RESULT:MAKE-SOURCE-RANGE have been removed. Clients should use
  ECLECTOR.BASE:SOURCE-POSITION and ECLECTOR.BASE:MAKE-SOURCE-RANGE
  respectively instead.

* The new reader ECLECTOR.BASE:RANGE-LENGTH can be applied to conditions of
  type ECLECTOR.BASE:STREAM-POSITION-CONDITION (which includes almost all
  conditions related to syntax errors) to determine the length of the
  sub-sequence of the input to which the condition in question pertains.

* Minor incompatible change

  The part of the labeled objects protocol that allows clients to construct
  parse results which represent labeled objects has been changed in an
  incompatible way. The change allows parse results which represent labeled
  objects to have child parse results but requires that clients construct parse
  results which represent labeled objects differently: instead of
  eql-specializing the result parameters of methods on
  ECLECTOR.PARSE-RESULT:MAKE-EXPRESSION-RESULT to
  ECLECTOR.PARSE-RESULT:**DEFINITION** and ECLECTOR.PARSE-RESULT:**REFERENCE**
  and receiving the labeled object in the children parameters, the result
  parameters now have to be specialized to the classes
  ECLECTOR.PARSE-RESULT:DEFINITION and ECLECTOR.PARSE-RESULT:REFERENCE
  respectively. The object passed as the result argument now contains the
  labeled object so that the children parameter can receive child parse results.

  This change is considered minor since the old mechanism described above was